--- a/platforms/ios/www/css/index-andriod.css
+++ b/platforms/ios/www/css/index-andriod.css
@@ -27,7 +27,7 @@ body {
     color:#000;
     background-color: #fffe6e;
     font-family: Helvetica, Arial, sans-serif;
-    font-size:18px;
+    font-size:30px;
     height:100%;
     margin:0px;
     padding:0px;
@@ -41,10 +41,10 @@ body {
     background:url(http://fc04.deviantart.net/fs70/f/2012/085/4/5/i_like_u_as_my_harvest_moon_chickens_by_malejoveza-d4u1hvg.png) no-repeat; /* 170px x 200px */
     position:absolute;             /* position in the center of the screen */
     left:20%;
-    top:20%;                  
+    top:17%;                  
     text-align:center;
-    padding:50px 80px 80px 210px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-50px 0px 0px -50px;
+    padding:100px 200px 200px 450px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    margin:-115px 0px 0px -112px;
     box-shadow: 5px 5px 8px #ff881b;  /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
 }
@@ -53,16 +53,16 @@ body {
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
         background-position:left center;
-        padding:100px 200px 50px 150px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-10px 0px 0px -30px;  /* offset vertical: half of image height */
+        padding:200px 400px 100px 300px;  /* padding-top + padding-bottom + text area = image height */
+        margin:-30px 0px 0px 0px;  /* offset vertical: half of image height */
                                       /* offset horizontal: half of image width and text area width */
     }
 }
 
 h1 {
-    font-size:30px;
+    font-size:60px;
     font-weight:normal;
-    margin: 14px;
+    margin:0px;
     overflow:visible;
     padding:0px;
     text-align:center;
@@ -70,10 +70,15 @@ h1 {
     color: #ff5f3c;
 }
 
+.image_background {
+    background: url(http://slodive.com/wp-content/uploads/2011/05/polka-dot-backgrounds/pastel-polka-dots.jpg) repeat transparent;
+    border-bottom: solid #ff5f3c 3px;
+}
+
 .chicken_slogan {
-    font-size:18px;
+    font-size:28px;
     font-weight:normal;
-    margin-top:5px;
+    margin:10px;
     overflow:visible;
     padding:0px;
     text-align:center;
@@ -86,17 +91,15 @@ h1 {
 .chicken_menu {
     background: url(http://slodive.com/wp-content/uploads/2011/05/polka-dot-backgrounds/pastel-polka-dots.jpg) repeat transparent;
     box-shadow: 5px 5px 8px #ff5f3c;
-    height: 250px;
-    margin-top: 0px;
-    border-bottom: solid #ff5f3c 2px;
+    height: 490px;
 }
 
 .chick_menu { 
     color: #ce230e; 
-    font-size: 16px; 
-    line-height: 18px; 
+    font-size: 36px; 
+    line-height: 50px; 
     height: 3em; 
-    margin-top: 25%;
+    margin-top: 280px;
     opacity: 1;
     font-family: 'Chicle', sans-serif;
     text-align:center;
@@ -105,14 +108,14 @@ h1 {
 .chick_cap_menu {
     color: #ce230e;
     display: inline-block;
-    line-height: 30px;
+    line-height: 50px;
     margin-left: 5px;
 }
 
 a {
     color: #ce230e;
     display: inline-block;
-    line-height: 30px;
+    line-height: 50px;
     margin-left: 5px;
     margin_right: 5px;
 }
@@ -133,26 +136,25 @@ a:hover
 
 .chick_all_button {
     color: #ff6e3c; 
-    border: solid 1px #ff6e3c; 
+    border: solid 3px #ff6e3c; 
     border-radius: 50%; 
     background-color: #fff7f5; 
     box-shadow: 5px 5px 5px; 
-    font-size: 14px; 
-    height: 40px; 
-    width: 53px; 
+    font-size: 24px; 
+    height: 70px; 
+    width: 95px; 
     font-family: 'Chicle', sans-serif;
-    text-align: center;
 }
 
 .chick_all_button:hover {
     color: orange; 
-    border: solid 1px #ff7f4d; 
+    border: solid 2px #ff7f4d; 
     background-color: #fff7f6;
 }
 
 .chick_all_button:active {
     color: #e19716; 
-    border: solid 1px #ee6e3c; 
+    border: solid 2px #ee6e3c; 
     background-color: #eee8e5; 
     box-shadow: 1px 1px 1px; 
     outline: none;
@@ -206,23 +208,22 @@ a:hover
 h3 { 
     font-family: 'Chicle', sans-serif; 
     color: #ff7e3c; 
-    font-size: 22px; 
+    font-size: 36px; 
     text-align: center;
 }
 
 .chick_img_package { 
     text-align: center;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .chick_image { 
-    height: 175px;
-    max-width: 270px; 
+    height: 400px; 
     border: solid 3px #ff881b; 
     width: auto; 
     margin-left: auto; 
     margin-right: auto; 
-    margin-top: 2%; 
+    margin-top: 3%; 
     margin-bottom: 4%; 
     display: inline-block; 
     box-shadow: 5px 5px 8px #ff881b;
@@ -246,11 +247,11 @@ input:focus {
 
 .chick_about { 
     width: 96.9%; 
-    font-size: 14px; 
+    font-size: 18px; 
     float: left; 
     margin-left: 1.5%; 
     margin-right: 1.5%; 
-    min-width: 250px; 
+    min-width: 300px; 
     margin-top: 5%;
 }
 
@@ -265,16 +266,16 @@ input:focus {
 }
 
 .chick_form { 
-    margin-bottom: 4px; 
-    line-height: 20px; 
-    font-size: 14px;
+    margin-bottom: 6px; 
+    line-height: 30px; 
+    font-size: 18px;
 }
 
 input { 
-    margin-bottom: 4px; 
-    line-height: 20px; 
-    width: 250px;
-    font-size: 16px;
+    margin-bottom: 6px; 
+    line-height: 36px; 
+    width: 400px;
+    font-size: 30px;
 }
 
 .chicken_output {
@@ -290,16 +291,16 @@ input:focus {
 }
 
 .chick_form_bold { 
-    margin-bottom: 4px; 
-    line-height: 20px; 
-    font-size: 18px; 
+    margin-bottom: 6px; 
+    line-height: 30px; 
+    font-size: 22px; 
     color: #ef512d;
 }
 
 .chick_petition { 
     margin-bottom: 6px; 
-    line-height: 20px; 
-    font-size: 18px; 
+    line-height: 30px; 
+    font-size: 22px; 
     color: #ff881b;
 }
 
@@ -315,58 +316,55 @@ input:focus {
     padding: 2%;
     border: solid 3px #ff881b;
     box-shadow: 5px 5px 8px #ff881b;
-    max-width: 280px;
+    max-width: 700px;
     margin-left: auto;
     margin-right: auto;
 }
 
-p { margin-bottom: 2px; 
-    line-height: 20px; 
-    font-size: 14px; 
-    margin-left: 2px;
-    margin-right: 2px;
+p { margin-bottom: 3px; 
+    line-height: 28px; 
+    font-size: 24px; 
+    margin-left: 3px;
+    margin-right: 3px;
 }
 
 .chick_video_package {
     text-align: center; 
-    padding: 3px; 
+    padding: 10px; 
     margin-left: auto; 
     margin-right: auto; 
-    width: 100%;
-    margin-top: 10px;    
+    width: 100%;    
 }
 
 .chick_video { 
     margin-left: auto; 
     margin-right: auto; 
-    margin-top: 5%; 
+    margin-top: 3%; 
     margin-bottom: 4%; 
     display: inline-block;
     box-shadow: 5px 5px 8px #ff881b;
-    max-width: 300px;
-    height: auto;
 }
 
 .chicken_whisper {
     text-align: center;
-    font-size: 14px;
-    padding: 2px;
+    font-size: 20px;
+    padding: 3px;
 }
 
 .chick_login {
     position: fixed; 
-    top: 20%;
-    right: 4%; 
-    left: 4%; 
+    top: 25%;
+    right: 28%; 
+    left: 28%; 
     margin-right: auto; 
     margin-left: auto; 
     padding-left: auto; 
     padding-right: auto; 
     border: solid 2px #ff881b; 
     background-color: yellow; 
-    height: 200px; 
-    max-width: 350px; 
-    box-shadow: 6px 6px 6px; 
+    height: 330px; 
+    max-width: 550px; 
+    box-shadow: 10px 10px 10px; 
     border-radius: 50%; 
     color: #ff6e3c; 
     z-index: 500; 
@@ -374,7 +372,7 @@ p { margin-bottom: 2px;
 }
 
 .chick_login_center { 
-    margin-top: 15%; 
+    margin-top: 20%; 
     text-align: center; 
     height: auto; 
     width: auto; 
@@ -388,16 +386,16 @@ p { margin-bottom: 2px;
 .chick_login_txt { 
     position: relative; 
     margin: auto; 
-    font-size: 14px; 
-    line-height: 20px; 
+    font-size: 18px; 
+    line-height: 36px; 
     color: #94230d;
 }
 
 .chick_login_fancy { 
-    font-size: 16px; 
+    font-size: 20px; 
     position: relative; 
     margin: auto; 
-    line-height: 20px; 
+    line-height: 36px; 
     font-family: 'Princess Sofia', sans-serif; 
     color: red;
 }
