--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -27,12 +27,13 @@ body {
     color:#000;
     background-color: #fffe6e;
     font-family: Helvetica, Arial, sans-serif;
-    font-size:30px;
+    font-size:18px;
     height:100%;
     margin:0px;
     padding:0px;
     text-transform:uppercase;
     width:100%;
+    text-align: center;
 }
 
 /* Portrait layout (default) */
@@ -42,8 +43,8 @@ body {
     left:20%;
     top:17%;                  
     text-align:center;
-    padding:100px 200px 200px 450px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;
+    padding:80px 160px 160px 400px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    margin:-100px 0px 0px -95px;
     box-shadow: 5px 5px 8px #ff881b;  /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
 }
@@ -59,9 +60,9 @@ body {
 }
 
 h1 {
-    font-size:60px;
+    font-size:30px;
     font-weight:normal;
-    margin:0px;
+    margin: 14px;
     overflow:visible;
     padding:0px;
     text-align:center;
@@ -69,10 +70,16 @@ h1 {
     color: #ff5f3c;
 }
 
+.image_background {
+    background: url(http://slodive.com/wp-content/uploads/2011/05/polka-dot-backgrounds/pastel-polka-dots.jpg) repeat transparent;
+    border-bottom: solid #ff5f3c 3px;
+    margin-top: 0px;
+}
+
 .chicken_slogan {
-    font-size:28px;
+    font-size:18px;
     font-weight:normal;
-    margin:10px;
+    margin:5px;
     overflow:visible;
     padding:0px;
     text-align:center;
@@ -85,27 +92,41 @@ h1 {
 .chicken_menu {
     background: url(http://slodive.com/wp-content/uploads/2011/05/polka-dot-backgrounds/pastel-polka-dots.jpg) repeat transparent;
     box-shadow: 5px 5px 8px #ff5f3c;
-    height: 490px;
+    height: 250px;
 }
 
 .chick_menu { 
-    color: #b36013; 
-    font-size: 36px; 
-    line-height: 26px; 
+    color: #ce230e; 
+    font-size: 16px; 
+    line-height: 18px; 
     height: 3em; 
-    margin-top: 280px;
+    margin-top: 120px;
     opacity: 1;
     font-family: 'Chicle', sans-serif;
     text-align:center;
 }
 
+.chick_cap_menu {
+    color: #ce230e;
+    display: inline-block;
+    line-height: 30px;
+    margin-left: 5px;
+}
+
 a {
     color: #ce230e;
     display: inline-block;
-    line-height: 50px;
+    line-height: 30px;
+    margin-left: 5px;
+    margin_right: 5px;
 }
 
 a:hover
+ {
+    color:orange;
+ }
+
+.chick_cap_menu:hover
  {
     color:orange;
  }
@@ -116,25 +137,26 @@ a:hover
 
 .chick_all_button {
     color: #ff6e3c; 
-    border: solid 3px #ff6e3c; 
+    border: solid 2px #ff6e3c; 
     border-radius: 50%; 
     background-color: #fff7f5; 
     box-shadow: 5px 5px 5px; 
-    font-size: 24px; 
-    height: 70px; 
-    width: 95px; 
+    font-size: 14px; 
+    height: 35px; 
+    width: 50px; 
     font-family: 'Chicle', sans-serif;
+    text-align: center;
 }
 
 .chick_all_button:hover {
     color: orange; 
-    border: solid 2px #ff7f4d; 
+    border: solid 1px #ff7f4d; 
     background-color: #fff7f6;
 }
 
 .chick_all_button:active {
     color: #e19716; 
-    border: solid 2px #ee6e3c; 
+    border: solid 1px #ee6e3c; 
     background-color: #eee8e5; 
     box-shadow: 1px 1px 1px; 
     outline: none;
@@ -144,17 +166,10 @@ a:hover
     outline: none;
 } 
 
-.chicken_whisper {
-    text-align: center;
-    font-size: 18px;
-    padding: 3px;
-
-}
-
 .chick_resources { 
     background-color: #fff4c9; 
     width: 90%; 
-    height: 600px; 
+    height: 650px; 
     margin-top: 8%;
     margin-left: 4.4%; 
     margin-right: 4.4%;
@@ -195,8 +210,200 @@ a:hover
 h3 { 
     font-family: 'Chicle', sans-serif; 
     color: #ff7e3c; 
-    font-size: 36px; 
+    font-size: 22px; 
     text-align: center;
+}
+
+.chick_img_package { 
+    text-align: center;
+    margin-top: 5px;
+}
+
+.chick_image { 
+    height: 150px; 
+    border: solid 3px #ff881b; 
+    width: auto; 
+    margin-left: auto; 
+    margin-right: auto; 
+    margin-top: 3%; 
+    margin-bottom: 4%; 
+    display: inline-block; 
+    box-shadow: 5px 5px 8px #ff881b;
+}
+
+input:focus {
+    outline-color: #ce561c;
+}
+
+.chick_gallery {
+    padding-left: 2%; 
+    padding-right: 2%; 
+    margin-left: auto; 
+    margin-right: auto;
+}
+
+.chick_gallery .chick_image { 
+    margin-left: 3%; 
+    margin-right: 3%;
+}
+
+.chick_about { 
+    width: 96.9%; 
+    font-size: 18px; 
+    float: left; 
+    margin-left: 1.5%; 
+    margin-right: 1.5%; 
+    min-width: 250px; 
+    margin-top: 5%;
+}
+
+.public_clucks {
+    width: 100%;
+    border: solid 2px #ee6e3c;
+}
+
+.follow_clucks {
+    width: 100%;
+    border: solid 2px #ee6e3c;
+}
+
+.chick_form { 
+    margin-bottom: 4px; 
+    line-height: 20px; 
+    font-size: 14px;
+}
+
+input { 
+    margin-bottom: 4px; 
+    line-height: 20px; 
+    width: 250px;
+    font-size: 16px;
+}
+
+.chicken_output {
+    color: red; 
+    background: #d08615;
+    border-radius: 40%;
+    box-shadow: 3px 3px 5px;
+    text-align: center;
+}
+
+input:focus {
+    outline-color: #ce561c;
+}
+
+.chick_form_bold { 
+    margin-bottom: 4px; 
+    line-height: 20px; 
+    font-size: 18px; 
+    color: #ef512d;
+}
+
+.chick_petition { 
+    margin-bottom: 6px; 
+    line-height: 20px; 
+    font-size: 18px; 
+    color: #ff881b;
+}
+
+.form_heading { 
+    font-family: 'Chicle', sans-serif; 
+    color: red; 
+    border-bottom: solid red 3px;
+    font-size: 5em;
+}
+
+.chick_contact_form { 
+    background-color: #fff4c9;
+    padding: 2%;
+    border: solid 3px #ff881b;
+    box-shadow: 5px 5px 8px #ff881b;
+    max-width: 280px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+p { margin-bottom: 2px; 
+    line-height: 20px; 
+    font-size: 14px; 
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+.chick_video_package {
+    text-align: center; 
+    padding: 5px; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 100%;    
+}
+
+.chick_video { 
+    margin-left: auto; 
+    margin-right: auto; 
+    margin-top: 3%; 
+    margin-bottom: 4%; 
+    display: inline-block;
+    box-shadow: 5px 5px 8px #ff881b;
+}
+
+.chicken_whisper {
+    text-align: center;
+    font-size: 14px;
+    padding: 2px;
+}
+
+.chick_login {
+    position: fixed; 
+    top: 20%;
+    right: 28%; 
+    left: 28%; 
+    margin-right: auto; 
+    margin-left: auto; 
+    padding-left: auto; 
+    padding-right: auto; 
+    border: solid 2px #ff881b; 
+    background-color: yellow; 
+    height: 200px; 
+    max-width: 350px; 
+    box-shadow: 6px 6px 6px; 
+    border-radius: 50%; 
+    color: #ff6e3c; 
+    z-index: 500; 
+    opacity: 1;
+}
+
+.chick_login_center { 
+    margin-top: 15%; 
+    text-align: center; 
+    height: auto; 
+    width: auto; 
+    z-index: 500; 
+    margin-left: auto; 
+    margin-right: auto; 
+    padding-left: auto; 
+    padding-right: auto;
+}
+
+.chick_login_txt { 
+    position: relative; 
+    margin: auto; 
+    font-size: 16px; 
+    line-height: 24px; 
+    color: #94230d;
+}
+
+.chick_login_fancy { 
+    font-size: 20px; 
+    position: relative; 
+    margin: auto; 
+    line-height: 24px; 
+    font-family: 'Princess Sofia', sans-serif; 
+    color: red;
+}
+
+.chick_member {
+    color: #fb580f;
 }
 
 .page {
@@ -205,6 +412,10 @@ h3 {
     position: relative;
     z-index: 100;
     height: 100%;
+}
+
+.clear_float { 
+    clear: both;
 }
 
 .activePage{
